ts-tests/baselines/reference/nestedScopeShadowing.errors.txt
nestedScopeShadowing.ts(6,1): error TS2451: Cannot redeclare block-scoped variable 'global1'.


==== nestedScopeShadowing.ts (1 errors) ====
    // Test 1: Module-level declarations should conflict
    const global1 = 1;
    ~~~~~~~~~~~~~~~~~~
    const global1 = 2; // Error: Duplicate identifier
    ~~~~~~~~~~~~~~~~~~
    Additional locations were found in the same file.
